--- a/index.html
+++ b/index.html
@@ -771,6 +771,41 @@
                     ```
                 </section>
 
+                <section>
+                    <h3>core.async</h3>
+                    <ul>
+                        <li>Based on Tony Hoare's CSP work</li>
+                        <li>And the work done in Go, occam, etc</li>
+                        <li>Provides queues or channels between independent threads</li>
+                        <li>Avoids callback hell</li>
+                        <li>Is implemented as a library</li>
+                    </ul>
+                </section>
+
+                <section>
+                    <pre><code data-sample='files/core_async.clj#channels'></code></pre>
+                </section>
+
+                <section>
+                    <pre><code data-sample='files/core_async.clj#channels-2'></code></pre>
+                </section>
+
+                <section>
+                    <pre><code data-sample='files/core_async.clj#thread'></code></pre>
+                </section>
+
+                <section>
+                    <pre><code data-sample='files/core_async.clj#go'></code></pre>
+                </section>
+
+                <section>
+                    <pre><code data-sample='files/core_async.clj#go-loop'></code></pre>
+                </section>
+
+                <section>
+                    <pre><code data-sample='files/core_async.clj#go-pipeline'></code></pre>
+                </section>
+
                 <!-- section data-markdown>
                     ```clj
                     ; there are other ways of getting concurrency or writing
