--- a/index.html
+++ b/index.html
@@ -888,6 +888,30 @@
                 </section>
 
                 <section>
+                    <pre><code data-sample='files/macros.clj#quote-2'></code></pre>
+                </section>
+
+                <section>
+                    <pre><code data-sample='files/macros.clj#unquote'></code></pre>
+                </section>
+
+                <section>
+                    <pre><code data-sample='files/macros.clj#unquote-example'></code></pre>
+                </section>
+
+                <section>
+                    <pre><code data-sample='files/macros.clj#unquote-example-answer'></code></pre>
+                </section>
+
+                <section>
+                    <pre><code data-sample='files/macros.clj#macroexpand'></code></pre>
+                </section>
+
+                <section>
+                    <pre><code data-sample='files/macros.clj#macroexpand-2'></code></pre>
+                </section>
+
+                <section>
                     <pre><code data-sample='files/macros.clj#quote-infix'></code></pre>
                 </section>
 
@@ -895,16 +919,52 @@
                     <pre><code data-sample='files/macros.clj#quote-infix-answer'></code></pre>
                 </section>
 
-                <section data-markdown>
-                    ```clj
-                    ; if you want to see how our infix macro looks like
-                    ; syntax quote, here it is
-                    (defmacro infix
-                    [[left-operand operator right-operand]]
-                    `(~operator ~left-operand ~right-operand))
+                <section>
+                    <pre><code data-sample='files/macros.clj#unquote-splice'></code></pre>
+                </section>
 
-                    (infix (2 + 3))
-                    ```
+                <section>
+                    <pre><code data-sample='files/macros.clj#list-add'></code></pre>
+                </section>
+
+                <section>
+                    <pre><code data-sample='files/macros.clj#list-add-splice'></code></pre>
+                </section>
+
+                <section>
+                    <pre><code data-sample='files/macros.clj#quoting-101-1'></code></pre>
+                </section>
+
+                <section>
+                    <pre><code data-sample='files/macros.clj#quoting-101-2'></code></pre>
+                </section>
+
+                <!-- section>
+                <pre><code data-sample='files/macros.clj#quoting-101-3'></code></pre>
+                </section-->
+
+                <section>
+                    <pre><code data-sample='files/macros.clj#ulta-when'></code></pre>
+                </section>
+
+                <section>
+                    <pre><code data-sample='files/macros.clj#ulta-when-as-function'></code></pre>
+                </section>
+
+                <section>
+                    <pre><code data-sample='files/macros.clj#ulta-when-as-macro'></code></pre>
+                </section>
+
+                <section>
+                    <pre><code data-sample='files/macros.clj#ulta-when-multiple-forms'></code></pre>
+                </section>
+
+                <section>
+                    <pre><code data-sample='files/macros.clj#ulta-when-unquote-splice'></code></pre>
+                </section>
+
+                <section>
+                    <pre><code data-sample='files/macros.clj#do-primes'></code></pre>
                 </section>
 
                 <section data-markdown>
