--- a/index.html
+++ b/index.html
@@ -795,6 +795,14 @@
                     </ul>
                 </section>
 
+                <section data-markdown>
+                    ```clj
+                    ;; there is a file called examples/core_async.clj
+                    ;; it has all the code if you want to run it
+                    ;; on the repl
+                    ```
+                </section>
+
                 <section>
                     <pre><code data-sample='files/core_async.clj#channels'></code></pre>
                 </section>
@@ -965,6 +973,58 @@
 
                 <section>
                     <pre><code data-sample='files/macros.clj#do-primes'></code></pre>
+                </section>
+
+                <section>
+                    <pre><code data-sample='files/macros.clj#with-timing'></code></pre>
+                </section>
+
+                <section>
+                    <pre><code data-sample='files/macros.clj#with-timing-ns-qualified-symbols'></code></pre>
+                </section>
+
+                <section>
+                    <pre><code data-sample='files/macros.clj#with-timing-unqualified-symbols'></code></pre>
+                </section>
+
+                <section>
+                    <pre><code data-sample='files/macros.clj#with-timing-variable-capture'></code></pre>
+                </section>
+
+                <section>
+                    <pre><code data-sample='files/macros.clj#with-timing-variable-capture-expand'></code></pre>
+                </section>
+
+                <section>
+                    <pre><code data-sample='files/macros.clj#with-timing-gensym-intro'></code></pre>
+                </section>
+
+                <section>
+                    <pre><code data-sample='files/macros.clj#with-timing-gensym-exercise'></code></pre>
+                </section>
+
+                <section>
+                    <pre><code data-sample='files/macros.clj#with-timing-gensym-answer'></code></pre>
+                </section>
+
+                <section>
+                    <pre><code data-sample='files/macros.clj#with-timing-gensym-expand'></code></pre>
+                </section>
+
+                <section>
+                    <pre><code data-sample='files/macros.clj#macro-returning-fn'></code></pre>
+                </section>
+
+                <section>
+                    <pre><code data-sample='files/macros.clj#macro-returning-fn-variable-capture'></code></pre>
+                </section>
+
+                <section>
+                    <pre><code data-sample='files/macros.clj#macro-returning-fn-variable-capture-explained'></code></pre>
+                </section>
+
+                <section>
+                    <pre><code data-sample='files/macros.clj#macro-returning-fn-gensym'></code></pre>
                 </section>
 
                 <section data-markdown>
