--- a/index.html
+++ b/index.html
@@ -1027,6 +1027,11 @@
                     <pre><code data-sample='files/macros.clj#macro-returning-fn-gensym'></code></pre>
                 </section>
 
+                <section>
+                    <pre><code data-sample='files/macros.clj#lsl'></code></pre>
+                </section>
+
+
                 <section data-markdown>
                     ```clj
                     ; another macro
